--- a/webapp/Accessible/wwwroot/index.html
+++ b/webapp/Accessible/wwwroot/index.html
@@ -74,28 +74,28 @@
       <h2 style>How it works</h2>
       <div class="flex-four-grid">
         <div class="feature-container">
-          <img src="search.png"/>
+          <img src="images/search.png"/>
           <div class="feature-content">
             <h3 class="feature-header">Search</h3>
             <p>Search for specific locations with the accessibility features you require.</p>
           </div>
         </div>
         <div class="feature-container">
-          <img src="rate.png"/>
+          <img src="images/rate.png"/>
           <div class="feature-content">
             <h3 class="feature-header">Rate</h3>
             <p>Join our global community by rating new locations on our map with tags and descriptions.</p>
           </div>
         </div>
         <div class="feature-container">
-          <img src="filter.png"/>
+          <img src="images/filter.png"/>
           <div class="feature-content">
             <h3 class="feature-header">Filter</h3>
             <p>Filter the map to discover places with specific accessibility features.</p>
           </div>
         </div>
         <div class="feature-container">
-          <img src="discover.png"/>
+          <img src="images/discover.png"/>
           <div class="feature-content">
             <h3 class="feature-header">Discover</h3>
             <p>Browse our interactive map to discover accessible places around the world.</p>
@@ -112,17 +112,17 @@
       <!--div class="responsive-video"><iframe width="977" height="524" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div-->
       <div class="flex-three-grid">
         <div class="flex-three-container">
-          <img src="green-pin-1.png" alt="Green pin"/>
+          <img src="images/green-pin-1.png" alt="Green pin"/>
           <h3 class="legend-header">Accessible</h3>
           <p>A green pin on our map represents an <b>accessible</b> location. These are places with full access, where we can get in, party, and go home with no problem.</p>
         </div>
         <div class="flex-three-container">
-          <img src="amber-pin-1.png" alt="Amber pin"/>
+          <img src="images/amber-pin-1.png" alt="Amber pin"/>
           <h3 class="legend-header">Partially Accessible</h3>
           <p>An amber pin on our map represents a location that is <b>partially accessible</b>. Amber locations often have alternative entrances or limited access within the space, such as steps to the bar area.</p>
         </div>
         <div class="flex-three-container">
-          <img src="red-pin-1.png" alt="Red pin"/>
+          <img src="images/red-pin-1.png" alt="Red pin"/>
             <h3 class="legend-header">Not Accessible</h3>
             <p>A red pin on our map represents a location that is <b>not accessible</b>. Find a red pin on our map? Why not tweet <a href="http://twitter.com/AccessiblyAU">@AccessiblyAU</a> about it and let’s make change happen.</p>
           </div>
@@ -139,15 +139,15 @@
       <h2>Our impact</h2>
       <div class="flex-three-grid">
         <div class="flex-three-container">
-          <img src="gradient-55.png" alt="55"/>
+          <img src="images/gradient-55.png" alt="55"/>
           <h3>Cities</h3>
         </div>
         <div class="flex-three-container">
-          <img src="gradient-108.png" alt="108"/>
+          <img src="images/gradient-108.png" alt="108"/>
           <h3>Locations Pinned</h3>
         </div>
         <div class="flex-three-container">
-          <img src="gradient-1.png" alt="1"/>
+          <img src="images/gradient-1.png" alt="1"/>
             <h3>Mission</h3>
           </div>
         </div>
